fixing version mobile sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,13 +91,14 @@ section#latest-posts.container, section#latest-posts.container .row.father .titl
       background-color: #333;
       color: #fff;
       position: fixed;
-      font-size: 2rem;
+      font-size: 1.5rem;
       top: 18rem;
       right: 0rem;
+      border: 0rem;
       animation: shadow-pulse 1s infinite; }
 @keyframes shadow-pulse {
   0% {
-    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.5); }
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.8); }
   100% {
     box-shadow: 0 0 0 35px rgba(0, 0, 0, 0); } }
     section#latest-posts.container .row.father .under-line, #footer-yousef.container.yousef .row.father .under-line, #footer-yousef.container.yousef section.row.dogs-photos div.center article:first-child .row div .row.father .under-line {
