--- a/assets/scss/yousef.scss
+++ b/assets/scss/yousef.scss
@@ -185,7 +185,7 @@ section#latest-posts.container {
         button {
             @keyframes shadow-pulse {
                 0% {
-                    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.5);
+                    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.8);
                 }
                 100% {
                     box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
@@ -194,9 +194,10 @@ section#latest-posts.container {
             background-color: $bgColorLastSectionOfFooter;
             color: $whiteColorText;
             position: fixed;
-            font-size: 2rem;
+            font-size: 1.5rem;
             top: 18rem;
             right: 0rem;
+            border: 0rem;
             animation: shadow-pulse 1s infinite;
         }
         .under-line {
